# Crystals-Kyber-OOP-CC

./: .gitignore  Bytes_8h_source.html  CMakeLists.txt  Keccak_8h_source.html  Matrix_8h_source.html  NTT_8h_source.html  Polynomial_8h_source.html  README.md  SamplingUnit_8h_source.html  annotated.html  classBytes-members.html  classBytes.html  classKeccak-members.html  classKeccak.html  classMatrix-members.html  classMatrix.html  classNTT-members.html  classNTT.html  classPolynomial-members.html  classPolynomial.html  classSamplingUnit.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_74490131f5eb8b002814b2d1d0fe25a3.html  docker-compose.yml  files.html  functions.html  functions_func.html  index.html  menudata.js  styles.css
.conf/: constants_values.h
docs/: Doxyfile  index.html
docs/html/: Bytes_8h_source.html  Keccak_8h_source.html  Kyber_8h_source.html  Matrix_8h_source.html  MessageParser_8h_source.html  NTT_8h_source.html  PWMUnit_8h_source.html  Polynomial_8h_source.html  SamplingUnit_8h_source.html  annotated.html  classBytes-members.html  classBytes.html  classCompressorUnit-members.html  classEncDecUnit-members.html  classKeccak.html  classKyber-members.html  classMatrix-members.html  classMatrix.html  classMessageParser.html  classNTT-members.html  classNTT.html  classPWMUnit.html  classPolynomial-members.html  classPolynomial.html  classSamplingUnit-members.html  classes.html  dir_74490131f5eb8b002814b2d1d0fe25a3.html  dir_c610c8504d46288da7634b3c0b18263f.html  dir_c8016663f2002cdad692de533097b0db.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js
docs/styles/: custom.css
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js
src/: client.cc
src/Attack/: KleptoKyber.cc  KleptoKyber.h
src/Attack/cyphers/: FRODOKEM-1344-shake.cc  FRODOKEM-1344-shake.h  FRODOKEM-640-shake.cc  FRODOKEM-640-shake.h  KYBER-KEM-512.cc  KYBER-KEM-512.h  cypher.h  mceliece-348864.cc  mceliece-348864.h  mceliece-460896.cc  mceliece-460896.h
src/Components/: CompressorUnit.cc  CompressorUnit.h  EncDecUnit.cc  EncDecUnit.h  Keccak.cc  Keccak.h  MessageParser.cc  NTT.cc  NTT.h  PWMUnit.cc  PWMUnit.h  SamplingUnit.cc  SamplingUnit.h
src/DataStructures/: Bytes.cc  Bytes.h  Matrix.h  Polynomial.h
src/Kyber/: Kyber.cc  Kyber.h  KyberKEM.cc  KyberKEM.h
src/ProgramInterfaces/: MessageParser.h  ProgramInterface.cc  ProgramInterface.h
test/: Bytes.cc  CompressorUnit.cc  EncDecUnit.cc  Keccak.cc  Kyber.cc  KyberKEM.cc  Matrix.cc  NTT.cc  PWMUnit.cc  Polynomial.cc  SamplingUnit.cc  big_sample.txt  big_sample2.txt  big_sample3.txt
